style: update home style

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,5 @@
-<div>
-    <app-quizz></app-quizz>
+<div
+  class="w-full h-[100dvh] font-DMSans flex flex-col items-center justify-center px-10 bg-gradient-to-t from-gray-800 via-gray-900 to-black"
+>
+  <app-quizz></app-quizz>
 </div>
